--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,8 +10,8 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  @apply text-blue-600 hover:text-blue-800;
+.head {
+  @apply text-white hover:text-light-blue;
 }
 
 * {
